--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ target-version = ["py37"]
 
 [tool.setuptools_scm]
 write_to = "Lib/glyphspkg/_version.py"
+version_scheme = "post-release"
 
 [build-system]
-# Minimum requirements for the build system to execute.
-requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
+requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.4"]
 build-backend = "setuptools.build_meta"
