--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,8 @@ include_package_data = True
 install_requires =
     openstep-plist >= 0.3.0
 python_requires = >=3.7
-# setup_requires =
-#     setuptools_scm
+setup_requires =
+    setuptools_scm
 
 [options.packages.find]
 where=Lib
