--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description_content_type = text/markdown; charset=UTF-8
 url = https://github.com/jenskutilek/glyphspkg
 author = Jens Kutilek
 license = MIT
-license_file = LICENSE
+license_files = LICENSE
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
