Update description and README

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = glyphspkg
-description = Converter from .glyphspackage to .glyphs files
+description = Converter from .glyphspackage to .glyphs files and vice versa
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
 url = https://github.com/jenskutilek/glyphspkg
