--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build-n-publish:
-    name: Build and publish Python distributions to PyPI and TestPyPI
+    name: Build and publish Python distribution to PyPI
     runs-on: ubuntu-latest
     environment:
       name: pypi
@@ -35,12 +35,6 @@ jobs:
           --wheel
           --outdir dist/
           .
-
-      - name: Publish distribution to Test PyPI
-        if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
 
       - name: Publish distribution to PyPI
         if: startsWith(github.ref, 'refs/tags')
